# log-lens

./: .gitignore  AGENTS.MD  CLAUDE.MD  Cargo.toml  LICENSE  README.MD  log_lens.db
.cursor/rules/: project.mdc
frontend/: index.html
src/: aggregator.rs  main.rs  pipeline.rs  server.rs  store.rs  summary.rs
src/ai/: anthropic.rs  mock.rs  mod.rs
src/parser/: ai_infer.rs  apache.rs  mod.rs
