[package]
name = "log-lens"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
sha2 = "0.10"
colored = "2"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "json", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# `tower::ServiceExt` provides `.oneshot()` for sending single requests in tests.
tower = { version = "0.4", features = ["util"] }
# `http_body_util::BodyExt` provides `.collect()` for reading response bodies in tests.
http-body-util = "0.1"
# `bytes::Bytes` is returned by `http_body_util::Collected::to_bytes()`.
# It is a transitive dep of axum but must be listed explicitly to name the type.
bytes = "1"
